--- a/app/src/main/res/values/strings_errors.xml
+++ b/app/src/main/res/values/strings_errors.xml
@@ -5,6 +5,7 @@
     <!-- Generic errors -->
     <string name="error_generic">Something went wrong</string>
     <string name="error_network">Whoops, something went wrong</string>
+    <string name="error_unknown">An unknown error occurred</string>
 
     <!-- Specific error contexts -->
 
